fix: 대기 순번이 제대로 계산되지 않는 문제 해결