@@ -73,11 +73,23 @@ class JdbcWaitRepositoryTest {
 
         jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 0),
                 "luke", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 1),
+                "fizz", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 2),
+                "neo", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
 
-        Optional<WaitDetailDto> waitId = waitRepository.findById(1L);
+        Optional<WaitDetailDto> waitLuke = waitRepository.findById(1L);
+        Optional<WaitDetailDto> waitFizz = waitRepository.findById(2L);
+        Optional<WaitDetailDto> waitNeo = waitRepository.findById(3L);
 
-        assertThat(waitId).isNotEmpty();
-        assertThat(waitId.get().id()).isEqualTo(1L);
+        assertThat(waitLuke).isNotEmpty();
+        assertThat(waitLuke.get().order()).isEqualTo(1L);
+
+        assertThat(waitFizz).isNotEmpty();
+        assertThat(waitFizz.get().order()).isEqualTo(2L);
+
+        assertThat(waitNeo).isNotEmpty();
+        assertThat(waitNeo.get().order()).isEqualTo(3L);
     }
 
     @Test
@@ -85,11 +97,18 @@ class JdbcWaitRepositoryTest {
         String createWait = "INSERT INTO `wait`(`created_at`, `name`, `reservation_date`, `time_id`, `theme_id`) VALUES (?, ?, ?, ?, ?)";
         jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 0),
                 "luke", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 1),
+                "fizz", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 2),
+                "neo", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
 
         List<WaitDetailDto> slots = waitRepository.findBySlot(LocalDate.of(2026, 5, 27), reservationTime.getId(),
                 theme.getId());
 
-        assertThat(slots.size()).isEqualTo(1);
+        assertThat(slots.size()).isEqualTo(3);
+        assertThat(slots.get(0).order()).isEqualTo(1L);
+        assertThat(slots.get(1).order()).isEqualTo(2L);
+        assertThat(slots.get(2).order()).isEqualTo(3L);
     }
 
     @Test
@@ -98,13 +117,31 @@ class JdbcWaitRepositoryTest {
 
         jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 0),
                 "luke", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
+
         jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 0),
+                "fizz", LocalDate.of(2026, 5, 28), reservationTime.getId(), theme.getId());
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 1),
                 "luke", LocalDate.of(2026, 5, 28), reservationTime.getId(), theme.getId());
+
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 0),
+                "fizz", LocalDate.of(2026, 5, 29), reservationTime.getId(), theme.getId());
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 1),
+                "neo", LocalDate.of(2026, 5, 29), reservationTime.getId(), theme.getId());
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 2),
+                "luke", LocalDate.of(2026, 5, 29), reservationTime.getId(), theme.getId());
 
         List<WaitDetailDto> waits = waitRepository.findByName("luke");
 
-        assertThat(waits.size()).isEqualTo(2);
-        assertThat(waits.getFirst().name()).isEqualTo("luke");
+        assertThat(waits.size()).isEqualTo(3);
+
+        assertThat(waits.get(0).order()).isEqualTo(1L);
+        assertThat(waits.get(0).name()).isEqualTo("luke");
+
+        assertThat(waits.get(1).order()).isEqualTo(2L);
+        assertThat(waits.get(1).name()).isEqualTo("luke");
+
+        assertThat(waits.get(2).order()).isEqualTo(3L);
+        assertThat(waits.get(2).name()).isEqualTo("luke");
     }
 
     @Test
@@ -113,12 +150,18 @@ class JdbcWaitRepositoryTest {
 
         jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 0),
                 "luke", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
-        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 0),
-                "fizz", LocalDate.of(2026, 5, 28), reservationTime.getId(), theme.getId());
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 1),
+                "fizz", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 2),
+                "neo", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
 
         List<WaitDetailDto> waits = waitRepository.findAll();
 
-        assertThat(waits.size()).isEqualTo(2);
+        assertThat(waits.size()).isEqualTo(3);
+
+        assertThat(waits.get(0).order()).isEqualTo(1L);
+        assertThat(waits.get(1).order()).isEqualTo(2L);
+        assertThat(waits.get(2).order()).isEqualTo(3L);
     }
 
     @Test
@@ -127,19 +170,21 @@ class JdbcWaitRepositoryTest {
 
         jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 0),
                 "luke", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
-        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 0),
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 1),
                 "fizz", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
+        jdbcTemplate.update(createWait, LocalDateTime.of(2026, 5, 21, 10, 2),
+                "neo", LocalDate.of(2026, 5, 27), reservationTime.getId(), theme.getId());
 
         Wait waitLuke = new Wait(1L, LocalDateTime.of(2026, 5, 21, 10, 0), "luke",
                 LocalDate.of(2026, 5, 27), reservationTime, theme);
-        Wait waitFizz = new Wait(2L, LocalDateTime.of(2026, 5, 21, 10, 0), "fizz",
+        Wait waitFizz = new Wait(2L, LocalDateTime.of(2026, 5, 21, 10, 1), "fizz",
+                LocalDate.of(2026, 5, 27), reservationTime, theme);
+        Wait waitNeo = new Wait(2L, LocalDateTime.of(2026, 5, 21, 10, 2), "neo",
                 LocalDate.of(2026, 5, 27), reservationTime, theme);
 
-        Long orderLuke = waitRepository.findOrderByWait(waitLuke);
-        Long orderFizz = waitRepository.findOrderByWait(waitFizz);
-
-        assertThat(orderLuke).isEqualTo(1L);
-        assertThat(orderFizz).isEqualTo(2L);
+        assertThat(waitRepository.findOrderByWait(waitLuke)).isEqualTo(1L);
+        assertThat(waitRepository.findOrderByWait(waitFizz)).isEqualTo(2L);
+        assertThat(waitRepository.findOrderByWait(waitNeo)).isEqualTo(3L);
     }
 
     @Test
